# Orthanc-TMI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  c++styles.xml  docker-compose.yml  library.h  run-docker.sh
.circleci/: config.yml
.github/: docker-compose.yml
.github/postgres/base/13757/: pg_internal.init
.github/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
.github/postgres/pg_stat/: db_0.stat  db_13757.stat  global.stat
.github/workflows/: build.yml  googletest.yml
docker/: Dockerfile  docker-compose.yml  orthanc.json
docker/images/orthanc/: Dockerfile  download-plugins.sh  setup-environment.sh
docker/images/orthanc-tmi/: Dockerfile  setup-environment.sh
docker/images/orthanc-tmi-plugins/: Dockerfile  download-plugins.sh
docker/orthanc/: orthanc-commented.json  orthanc.json  orthanc_client.json
docker/postgres/: init.sql
docs/: Report.odt  ScrumTemplate.md  requirements.md  week10.md  week11.md  week14_scrum.md  week15_scrum.md  week16_scrum.md  week17_scrum.md  week18_scrum.md  week19_scrum.md  week21_scrum.md  week22_scrum.md  week23_scrum.md  week24_scrum.md  week5.md  week6.md  week7.md  week8.md  week9.md
docs/diagrams/: DFD-0.eddx  DFD-1.eddx  system-design.eddx
documents/: requirements.md  week5.md
documents/diagrams/: DFD-1.eddx
include/: callbacks.h  configuration.h  core.h  date-truncation.h  db-interface.h  dicom-checksum.h  dicom-element-view.h  dicom-element.h  dicom-file.h  dicom-filter.h  dicom-tag.h  job-queue.h  json.h  library.h  plugin-configure.h  storage-area.h
include/data/: date-truncation.h  db-interface.h  on-stored.h  storage-area.h
include/dicom/: dicom-anonymizer.h  dicom-checksum.h  dicom-element-view.h  dicom-file.h  dicom-tag.h
include/functions/: callbacks.h
include/orthanc/: OrthancCPlugin.h
include/plugin/: data-transport.h  db-interface.h  job-queue.h  plugin-configure.h
samples/: MG000000.dcm  MG000001.dcm  MG000002.dcm  MG000003.dcm  MG000004.dcm  MG000005.dcm  MG000006.dcm  MG000007.dcm  credit.txt
src/: CMakeLists.txt  date-truncation.cpp  db-interface.cpp  dicom-checksum.cpp  dicom-element.cpp  dicom-file.cpp  dicom-filter.cpp  job-queue.cpp  library.cpp  main.cpp  on-stored.cpp  plugin-configure.cpp  plugin.cpp  storage-area.cpp
src/callbacks/: incoming-filter.cpp  on-stored.cpp  storage-area.cpp
src/data/: date-truncation.cpp  db-interface.cpp  on-stored.cpp  storage-area.cpp
src/dicom/: dicom-anonymizer.cpp  dicom-checksum.cpp  dicom-element-view.cpp  dicom-file.cpp  dicom-filter.cpp  dicom-tag.cpp
src/functions/: date-truncation.cpp
src/functions/callbacks/: incoming-filter.cpp  on-change.cpp  on-stored.cpp  storage-area.cpp
src/plugin/: data-transport.cpp  db-interface.cpp  initialize.sql  job-queue.cpp  plugin-configure.cpp
test/: CMakeLists.txt  library-tests.cpp  main.cpp
tests/: common.cpp  common.h  library-tests.cpp  test-datetruncation.cpp  tests-anon.cpp  tests-date-truncation.cpp  tests-dicom-parse.cpp  tests-filter.cpp  tests-hex.cpp  tests-jobqueue.cpp  tests-libraries.cpp  tests-postgrsql.cpp  tests-storage.cpp
tests/backend/: tests-jobqueue.cpp  tests-libraries.cpp  tests-postgrsql.cpp
tests/dicom/: 1-tests-parse.cpp  2-tests-anon.cpp  tests-anon.cpp  tests-parse.cpp
tests/dicom-parse/: common.cpp  dp-main.cpp
tests/functions/: tests-date-truncation.cpp  tests-hex.cpp
